--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "vue-weather-app",
   "version": "0.1.0",
+  "sideEffects": [
+    "*.css",
+    "*.scss",
+    "./src/globals.js"
+  ],
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
