--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
