--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.2.0",
+    "@fortawesome/free-solid-svg-icons": "^7.2.0",
+    "@fortawesome/vue-fontawesome": "^3.1.3",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "echarts": "^5.5.1",
